added styles for front-page

--- a/assets/sass/base/_elements.scss
+++ b/assets/sass/base/_elements.scss
@@ -1,7 +1,9 @@
 //--------------------------------------------------------------
 // HTML Elements
 //--------------------------------------------------------------
-
+a {
+	text-decoration: none;
+}
 //--------------------------------------------------------------
 // Iframes
 //--------------------------------------------------------------
@@ -44,6 +46,7 @@ ol {
 li > ul,
 li > ol {
 	margin: 0 0 0 rem(24);
+
 } // li > ul, li > ol
 
 dt {
@@ -54,6 +57,9 @@ dd {
 	margin: 0 rem(24) rem(24) 0;
 } // dd
 
+li {
+	list-style: none;
+}
 //--------------------------------------------------------------
 // Tables
 //--------------------------------------------------------------
