--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -1,6 +1,13 @@
 //--------------------------------------------------------------
 // Header
 //--------------------------------------------------------------
+.site-header {
+	padding: 0;
+}
+//Site Branding
+.site-branding {
+	display: inline-block;
+}
 
 // Site Title
 .site-title {
