--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -12,6 +12,10 @@
 //-------------------------------------------------------------
 
 // COLORS
+// Custom Nav Colors
+$mobile-nav-color: #000;
+$white: #fff;
+$black: #000;
 
 // Primary palette
 $color-blue: #21759b;
