--- a/assets/sass/modules/_navigation.scss
+++ b/assets/sass/modules/_navigation.scss
@@ -1,176 +1,90 @@
-//--------------------------------------------------------------
-// Navigation
-//--------------------------------------------------------------
-
-// Links
-a {
-	color: $color-link;
-
-	&:visited {
-		color: $color-link-visited;
-	} // &:visited
-
-	&:hover,
-	&:focus,
-	&:active {
-		color: $color-link-hover;
-	} // &:hover, &:focus, &:active
-} // a
-
-// Default menu (active after a fresh WordPress install)
-.menu {
-	@include list-reset;
-
-	li {
-		margin: 0 rem(10) 0 0;
-	} // li
-
-	ul {
-		@include list-reset;
-	} // ul
-
-	&.menu-horizontal {
-
-		li {
-			display: inline-block;
-		} // li
-	} // &.menu-horizontal
-
-	&.menu-vertical {
-
-		li {
-			margin: 0;
-		} // li
+@media screen and (min-width: 700px) {
+	.mobile-navigation{
+		display: none;
+	}
+	.main-navigation {
+		display: block;
+	}
+	.main-navigation ul {
+		position: relative;
+		opacity: 1;
+		width: inherit;
+	}
+	.menu-toggle {
+		display: none;
+	}
+	.main-navigation {
+		float: right;
+		width: 60%;
 
 		a {
-			border-bottom: 1px solid $color-background-hr;
-			padding: rem(10);
-		} // a
-	} // &.menu-vertical
+			color: $black;
+		}
+	}
 
-	&.dropdown {
-
-		// Sub-menu
-		ul {
-			@include position(absolute, rem(24) null null -999em);
-
-			box-shadow: 0 3px 3px rgba($color-black, 0.2);
-			float: left;
-			z-index: 99999;
-
-			// Sub-sub menu
-			ul {
-				left: -999em;
-				top: 0;
-			} // ul
-
-			// Sub-menu items
+.main-navigation ul {
+		display: inline-block;
+		top: 0;	
+		background-color: #fff;
+		text-align: right;
+		margin-top: 2em;
+		float: right;
+			
 			li {
+				float: left;
+				margin-right: 3em;
+			}
+		.menu-item {
+			color: $black;
+			border-bottom: 2px solid transparent;
+			transition: border-bottom .5s ease;
 
-				&:hover > ul,
-				&.focus > ul {
-					left: 100%;
-				} // &:hover > ul, &.focus > ul
-			} // li
+			&:hover,
+			&:focus {
+				border-bottom: 2px solid $black;
+			}
+		}
+	}
 
-			// Sub-menu links
-			a {
-				@include size(rem(200) auto);
-			} // a
+}
 
-			&:hover > a,
-			.focus > a {
-			} // &:hover > a, .focus > a
+/****************************
+	Posts Nav 
+ ****************************/
 
-			a:hover,
-			a.focus {
-			} // a:hover, a.focus
-		} // ul
+.post-navigation {
+		float: right;
+	.site-main & {
+		margin: 0 0 1.5em;
+		overflow: hidden;
+	}
+	
 
-		// Display sub-menu on hover
-		li:hover > ul,
-		.focus > ul {
-			left: auto;
-		} // li:hover > ul, .focus > ul
+}
+//--------------------------------------------------------------
+// Front Page Catagories nav
+//--------------------------------------------------------------
+.menu-front-page-menu-container {
+	text-align: center;
+}
 
-		// Menu items
+.front-page-nav ul {
+		display: inline-block;
+		text-align: center;
+		margin-top: 2em;
+		
 		li {
 			float: left;
-			position: relative;
+			margin-left: 1em;
+			border-bottom: 2px solid transparent;
+			transition: border-bottom .5s ease;
 
-			&:hover > a,
-			&.focus > a {
-			} // &:hover > a, &.focus > a
-		} // li
-	} // &.dropdown
-
-	// Menu hyperlinks
-	a {
-		display: block;
-		text-decoration: none;
-	} // a
-
-	// Current items
-	.current_page_item a,
-	.current-menu-item a {
-	} // .current_page_item a, .current-menu-item a
-} // .menu
-
-// Main navigation (after creating a menu in the dashboard)
-.main-navigation {
-	@include size(100% auto);
-
-	clear: both;
-	display: none;
-	float: left;
-
-	// Menu area
-	ul {
-		display: none;
-
-		@include media($phone-landscape) {
-			display: block;
+			&:hover,
+			&:focus {
+				border-bottom: 2px solid $black;
+			}
+			a {
+				color: $black;
+			}
 		}
-	} // ul
-
-	&.toggled ul {
-		display: block;
-	} // &.toggled ul
-
-	@include media($tablet-landscape) {
-		display: block;
-	}
-} // .main-navigation
-
-// Small menu
-.menu-toggle {
-	display: block;
-
-	@include media($phone-landscape) {
-		display: none;
-	}
-} // .menu-toggle
-
-// Navigation on Comment, Post and Posts
-.comment-navigation,
-.posts-navigation,
-.post-navigation {
-
-	.site-main & {
-		margin: 0 0 rem(24) 0;
-		overflow: hidden;
-	} // .site-main &
-
-	&.nav-previous {
-		@include size(50% auto);
-
-		float: left;
-	} // &.nav-previous
-
-	&.nav-next {
-		@include size(50% auto);
-
-		float: right;
-		text-align: right;
-	} // &.nav-next
-} // .comment-navigation, .posts-navigation, .post-navigation
+}
