--- a/assets/sass/modules/_navigation.scss
+++ b/assets/sass/modules/_navigation.scss
@@ -1,90 +1,176 @@
-@media screen and (min-width: 700px) {
-	.mobile-navigation{
-		display: none;
-	}
-	.main-navigation {
-		display: block;
-	}
-	.main-navigation ul {
-		position: relative;
-		opacity: 1;
-		width: inherit;
-	}
-	.menu-toggle {
-		display: none;
-	}
-	.main-navigation {
-		float: right;
-		width: 60%;
+//--------------------------------------------------------------
+// Navigation
+//--------------------------------------------------------------
+
+// Links
+a {
+	color: $color-link;
+
+	&:visited {
+		color: $color-link-visited;
+	} // &:visited
+
+	&:hover,
+	&:focus,
+	&:active {
+		color: $color-link-hover;
+	} // &:hover, &:focus, &:active
+} // a
+
+// Default menu (active after a fresh WordPress install)
+.menu {
+	@include list-reset;
+
+	li {
+		margin: 0 rem(10) 0 0;
+	} // li
+
+	ul {
+		@include list-reset;
+	} // ul
+
+	&.menu-horizontal {
+
+		li {
+			display: inline-block;
+		} // li
+	} // &.menu-horizontal
+
+	&.menu-vertical {
+
+		li {
+			margin: 0;
+		} // li
 
 		a {
-			color: $black;
-		}
-	}
+			border-bottom: 1px solid $color-background-hr;
+			padding: rem(10);
+		} // a
+	} // &.menu-vertical
 
-.main-navigation ul {
-		display: inline-block;
-		top: 0;	
-		background-color: #fff;
-		text-align: right;
-		margin-top: 2em;
-		float: right;
-			
+	&.dropdown {
+
+		// Sub-menu
+		ul {
+			@include position(absolute, rem(24) null null -999em);
+
+			box-shadow: 0 3px 3px rgba($color-black, 0.2);
+			float: left;
+			z-index: 99999;
+
+			// Sub-sub menu
+			ul {
+				left: -999em;
+				top: 0;
+			} // ul
+
+			// Sub-menu items
 			li {
-				float: left;
-				margin-right: 3em;
-			}
-		.menu-item {
-			color: $black;
-			border-bottom: 2px solid transparent;
-			transition: border-bottom .5s ease;
 
-			&:hover,
-			&:focus {
-				border-bottom: 2px solid $black;
-			}
-		}
-	}
+				&:hover > ul,
+				&.focus > ul {
+					left: 100%;
+				} // &:hover > ul, &.focus > ul
+			} // li
 
-}
+			// Sub-menu links
+			a {
+				@include size(rem(200) auto);
+			} // a
 
-/****************************
-	Posts Nav 
- ****************************/
+			&:hover > a,
+			.focus > a {
+			} // &:hover > a, .focus > a
 
-.post-navigation {
-		float: right;
-	.site-main & {
-		margin: 0 0 1.5em;
-		overflow: hidden;
-	}
-	
+			a:hover,
+			a.focus {
+			} // a:hover, a.focus
+		} // ul
 
-}
-//--------------------------------------------------------------
-// Front Page Catagories nav
-//--------------------------------------------------------------
-.menu-front-page-menu-container {
-	text-align: center;
-}
+		// Display sub-menu on hover
+		li:hover > ul,
+		.focus > ul {
+			left: auto;
+		} // li:hover > ul, .focus > ul
 
-.front-page-nav ul {
-		display: inline-block;
-		text-align: center;
-		margin-top: 2em;
-		
+		// Menu items
 		li {
 			float: left;
-			margin-left: 1em;
-			border-bottom: 2px solid transparent;
-			transition: border-bottom .5s ease;
+			position: relative;
 
-			&:hover,
-			&:focus {
-				border-bottom: 2px solid $black;
-			}
-			a {
-				color: $black;
-			}
+			&:hover > a,
+			&.focus > a {
+			} // &:hover > a, &.focus > a
+		} // li
+	} // &.dropdown
+
+	// Menu hyperlinks
+	a {
+		display: block;
+		text-decoration: none;
+	} // a
+
+	// Current items
+	.current_page_item a,
+	.current-menu-item a {
+	} // .current_page_item a, .current-menu-item a
+} // .menu
+
+// Main navigation (after creating a menu in the dashboard)
+.main-navigation {
+	@include size(100% auto);
+
+	clear: both;
+	display: none;
+	float: left;
+
+	// Menu area
+	ul {
+		display: none;
+
+		@include media($phone-landscape) {
+			display: block;
 		}
-}
+	} // ul
+
+	&.toggled ul {
+		display: block;
+	} // &.toggled ul
+
+	@include media($tablet-landscape) {
+		display: block;
+	}
+} // .main-navigation
+
+// Small menu
+.menu-toggle {
+	display: block;
+
+	@include media($phone-landscape) {
+		display: none;
+	}
+} // .menu-toggle
+
+// Navigation on Comment, Post and Posts
+.comment-navigation,
+.posts-navigation,
+.post-navigation {
+
+	.site-main & {
+		margin: 0 0 rem(24) 0;
+		overflow: hidden;
+	} // .site-main &
+
+	&.nav-previous {
+		@include size(50% auto);
+
+		float: left;
+	} // &.nav-previous
+
+	&.nav-next {
+		@include size(50% auto);
+
+		float: right;
+		text-align: right;
+	} // &.nav-next
+} // .comment-navigation, .posts-navigation, .post-navigation
