added base styles to header

--- a/assets/sass/modules/_hero.scss
+++ b/assets/sass/modules/_hero.scss
@@ -54,7 +54,7 @@
 
 		// Add padding to description.
 		.hero-description {
-			padding-bottom: rem(24);
+			padding: 1.5em;
 		} // .hero-description
 
 		// Style button.
