--- a/assets/sass/modules/_hero.scss
+++ b/assets/sass/modules/_hero.scss
@@ -10,8 +10,6 @@
 	position: relative;
 	z-index: 1;
 
-
-
 	// Transparent overlay (optional).
 	&::after {
 		@include position(absolute, 0 0 null null);
@@ -40,10 +38,21 @@
 		justify-content: center;
 		margin: 0 auto;
 		max-width: rem(500); // width of content container
-		min-height: rem(500); // height of hero
+		min-height: rem(300); // height of hero
 		position: relative;
 		text-align: center;
 		z-index: 3;
+
+		.hero-title {
+			margin-top: 0;
+			margin-bottom: .5em;
+			font-size: 3em;
+			color: $white;
+
+			a {
+				color: $white;
+			}
+		}
 
 		// Set defaults.
 		.hero-title,
@@ -54,7 +63,8 @@
 
 		// Add padding to description.
 		.hero-description {
-			padding: 1.5em;
+			padding: .5em 1em .5em;
+			margin-bottom: 1em;
 		} // .hero-description
 
 		// Style button.
@@ -63,7 +73,7 @@
 
 			background: transparent;
 			border: 2px solid $color-white;
-
+			margin-top: 1em;
 			&:hover {
 				background: rgba($color-black, 0.7);
 				text-decoration: none;
